--- a/src/components/Notes/Notes.module.css
+++ b/src/components/Notes/Notes.module.css
@@ -29,14 +29,26 @@
   padding: 16px;
   display: flex;
   flex-direction: column;
-  overflow: scroll;
+  overflow-y: auto;
 }
 
 .notes {
   list-style-type: none;
-  display: flex;
   flex-grow: 1;
+  display: flex;
   gap: 16px;
   flex-direction: column;
   justify-content: flex-end;
 }
+
+/* .notes {
+  background-color: var(--BG-COLOR);
+  padding: 16px;
+  list-style-type: none;
+  display: flex;
+  gap: 16px;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: end;
+  overflow-y: scroll;
+} */
